--- a/fixtures/vcr_cassettes/WebOfScience_QueryAuthor/_uids_with_symbolicTimeSpan/returns_a_small_Array_String_of_WOS-UIDs.yml
+++ b/fixtures/vcr_cassettes/WebOfScience_QueryAuthor/_uids_with_symbolicTimeSpan/returns_a_small_Array_String_of_WOS-UIDs.yml
@@ -8,11 +8,11 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - HTTPClient/1.0 (2.8.3, ruby 2.3.4 (2017-03-30))
+      - HTTPClient/1.0 (2.8.3, ruby 2.4.1 (2017-03-22))
       Accept:
       - "*/*"
       Date:
-      - Tue, 13 Feb 2018 19:27:31 GMT
+      - Tue, 27 Feb 2018 23:47:38 GMT
       Authorization:
       - Basic Settings.WOS.AUTH_CODE
       Soapaction:
@@ -25,7 +25,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Date:
-      - Tue, 13 Feb 2018 19:27:31 GMT
+      - Tue, 27 Feb 2018 23:47:37 GMT
       Server:
       - Apache-Coyote/1.1
       Content-Length:
@@ -224,7 +224,7 @@ http_interactions:
           </wsdl:service>
         </wsdl:definitions>
     http_version: 
-  recorded_at: Tue, 13 Feb 2018 19:27:31 GMT
+  recorded_at: Tue, 27 Feb 2018 23:47:38 GMT
 - request:
     method: post
     uri: http://search.webofknowledge.com/esti/wokmws/ws/WOKMWSAuthenticate
@@ -235,11 +235,11 @@ http_interactions:
         xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><tns:authenticate></tns:authenticate></soapenv:Body></soapenv:Envelope>
     headers:
       User-Agent:
-      - HTTPClient/1.0 (2.8.3, ruby 2.3.4 (2017-03-30))
+      - HTTPClient/1.0 (2.8.3, ruby 2.4.1 (2017-03-22))
       Accept:
       - "*/*"
       Date:
-      - Tue, 13 Feb 2018 19:27:31 GMT
+      - Tue, 27 Feb 2018 23:47:38 GMT
       Authorization:
       - Basic Settings.WOS.AUTH_CODE
       Soapaction:
@@ -256,11 +256,11 @@ http_interactions:
       Content-Type:
       - text/xml;charset=UTF-8
       Date:
-      - Tue, 13 Feb 2018 19:27:31 GMT
+      - Tue, 27 Feb 2018 23:47:37 GMT
       Server:
       - Apache-Coyote/1.1
       Set-Cookie:
-      - SID=7AOu9qul9f8zcEu4zih
+      - SID=7DKVkpZqb9bc5s7zSoU
       Content-Length:
       - '252'
       Connection:
@@ -268,9 +268,9 @@ http_interactions:
     body:
       encoding: UTF-8
       string: <soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/"><soap:Body><ns2:authenticateResponse
-        xmlns:ns2="http://auth.cxf.wokmws.thomsonreuters.com"><return>7AOu9qul9f8zcEu4zih</return></ns2:authenticateResponse></soap:Body></soap:Envelope>
+        xmlns:ns2="http://auth.cxf.wokmws.thomsonreuters.com"><return>7DKVkpZqb9bc5s7zSoU</return></ns2:authenticateResponse></soap:Body></soap:Envelope>
     http_version: 
-  recorded_at: Tue, 13 Feb 2018 19:27:31 GMT
+  recorded_at: Tue, 27 Feb 2018 23:47:38 GMT
 - request:
     method: get
     uri: http://search.webofknowledge.com/esti/wokmws/ws/WokSearch?wsdl
@@ -279,13 +279,13 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - HTTPClient/1.0 (2.8.3, ruby 2.3.4 (2017-03-30))
+      - HTTPClient/1.0 (2.8.3, ruby 2.4.1 (2017-03-22))
       Accept:
       - "*/*"
       Date:
-      - Tue, 13 Feb 2018 19:27:31 GMT
+      - Tue, 27 Feb 2018 23:47:38 GMT
       Cookie:
-      - SID="7AOu9qul9f8zcEu4zih"
+      - SID="7DKVkpZqb9bc5s7zSoU"
       Soapaction:
       - ''
   response:
@@ -296,7 +296,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Date:
-      - Tue, 13 Feb 2018 19:27:31 GMT
+      - Tue, 27 Feb 2018 23:47:38 GMT
       Server:
       - Apache-Coyote/1.1
       Transfer-Encoding:
@@ -988,7 +988,7 @@ http_interactions:
           </wsdl:service>
         </wsdl:definitions>
     http_version: 
-  recorded_at: Tue, 13 Feb 2018 19:27:32 GMT
+  recorded_at: Tue, 27 Feb 2018 23:47:38 GMT
 - request:
     method: post
     uri: http://search.webofknowledge.com/esti/wokmws/ws/WokSearch
@@ -997,23 +997,23 @@ http_interactions:
       string: <?xml version="1.0" encoding="UTF-8"?><soapenv:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="http://woksearch.v3.wokmws.thomsonreuters.com"
         xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><tns:search><queryParameters><databaseId>WOK</databaseId><userQuery>AU=(&quot;Altman,Russ&quot;
-        or &quot;Altman,R&quot; or &quot;Altman,Russ,Biagio&quot; or &quot;Altman,Russ,B&quot;
-        or &quot;Altman,RB&quot; or &quot;Altman,R,B&quot;) AND AD=(stanford)</userQuery><symbolicTimeSpan>4week</symbolicTimeSpan><queryLanguage>en</queryLanguage></queryParameters><retrieveParameters><firstRecord>1</firstRecord><count>100</count><viewField><collectionName>WOS</collectionName><fieldName></fieldName></viewField><viewField><collectionName>MEDLINE</collectionName><fieldName></fieldName></viewField><option><key>RecordIDs</key><value>On</value></option></retrieveParameters></tns:search></soapenv:Body></soapenv:Envelope>
+        OR &quot;Altman,R&quot; OR &quot;Altman,Russ,Biagio&quot; OR &quot;Altman,Russ,B&quot;
+        OR &quot;Altman,RB&quot; OR &quot;Altman,R,B&quot;) AND AD=(&quot;stanford&quot;)</userQuery><symbolicTimeSpan>4week</symbolicTimeSpan><queryLanguage>en</queryLanguage></queryParameters><retrieveParameters><firstRecord>1</firstRecord><count>100</count><viewField><collectionName>WOS</collectionName><fieldName></fieldName></viewField><viewField><collectionName>MEDLINE</collectionName><fieldName></fieldName></viewField><option><key>RecordIDs</key><value>On</value></option></retrieveParameters></tns:search></soapenv:Body></soapenv:Envelope>
     headers:
       User-Agent:
-      - HTTPClient/1.0 (2.8.3, ruby 2.3.4 (2017-03-30))
+      - HTTPClient/1.0 (2.8.3, ruby 2.4.1 (2017-03-22))
       Accept:
       - "*/*"
       Date:
-      - Tue, 13 Feb 2018 19:27:32 GMT
+      - Tue, 27 Feb 2018 23:47:38 GMT
       Cookie:
-      - SID="7AOu9qul9f8zcEu4zih"
+      - SID="7DKVkpZqb9bc5s7zSoU"
       Soapaction:
       - ''
       Content-Type:
       - text/xml;charset=UTF-8
       Content-Length:
-      - '998'
+      - '1010'
   response:
     status:
       code: 200
@@ -1022,23 +1022,26 @@ http_interactions:
       Content-Type:
       - text/xml;charset=UTF-8
       Date:
-      - Tue, 13 Feb 2018 19:27:31 GMT
+      - Tue, 27 Feb 2018 23:47:37 GMT
       Server:
       - Apache-Coyote/1.1
       Content-Length:
-      - '1804'
+      - '2596'
       Connection:
       - keep-alive
     body:
       encoding: UTF-8
       string: |-
-        <soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/"><soap:Body><ns2:searchResponse xmlns:ns2="http://woksearch.v3.wokmws.thomsonreuters.com"><return><queryId>1</queryId><recordsFound>5</recordsFound><recordsSearched>437696</recordsSearched><optionValue><label>RecordIDs</label><value>WOS:000419625900016</value><value>MEDLINE:29199461</value><value>WOS:000418800600012</value><value>WOS:000422723300003</value><value>WOS:000422694003088</value></optionValue><records>&lt;records xmlns="http://scientific.thomsonreuters.com/schema/wok5.4/public/Fields">
-        &lt;REC r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000419625900016&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>
-        &lt;REC r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>MEDLINE:29199461&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>
+        <soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/"><soap:Body><ns2:searchResponse xmlns:ns2="http://woksearch.v3.wokmws.thomsonreuters.com"><return><queryId>1</queryId><recordsFound>8</recordsFound><recordsSearched>458654</recordsSearched><optionValue><label>RecordIDs</label><value>MEDLINE:28975675</value><value>WOS:000424386600014</value><value>MEDLINE:29462399</value><value>WOS:000418800600012</value><value>WOS:000405616900002</value><value>WOS:000422723300003</value><value>WOS:000422694003088</value><value>WOS:000424402500017</value></optionValue><records>&lt;records xmlns="http://scientific.thomsonreuters.com/schema/wok5.4/public/Fields">
+        &lt;REC r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>MEDLINE:28975675&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>
+        &lt;REC r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000424386600014&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>
+        &lt;REC r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>MEDLINE:29462399&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>
         &lt;REC r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000418800600012&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>
+        &lt;REC r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000405616900002&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data&gt;&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>
         &lt;REC r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000422723300003&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>
         &lt;REC r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000422694003088&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>
+        &lt;REC r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000424402500017&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>
         &lt;/records></records></return></ns2:searchResponse></soap:Body></soap:Envelope>
     http_version: 
-  recorded_at: Tue, 13 Feb 2018 19:27:32 GMT
+  recorded_at: Tue, 27 Feb 2018 23:47:38 GMT
 recorded_with: VCR 4.0.0
