--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -46,6 +46,7 @@ Layout/LineLength:
     - "spec/models/publication_spec.rb"
     - "spec/lib/pubmed/query_author_spec.rb"
     - "spec/lib/bibtex_ingester_spec.rb"
+    - "spec/lib/orcid/client_spec.rb"
 
 Metrics/AbcSize:
   Max: 35
