--- a/fixtures/vcr_cassettes/WebOfScience_QueryAuthor/_uids_with_symbolicTimeSpan/returns_less_Array_String_of_WOS-UIDs.yml
+++ b/fixtures/vcr_cassettes/WebOfScience_QueryAuthor/_uids_with_symbolicTimeSpan/returns_less_Array_String_of_WOS-UIDs.yml
@@ -12,7 +12,7 @@ http_interactions:
       Accept:
       - "*/*"
       Date:
-      - Wed, 19 May 2021 21:37:25 GMT
+      - Wed, 19 May 2021 22:24:59 GMT
       Authorization:
       - Basic Settings.WOS.AUTH_CODE
       Soapaction:
@@ -25,7 +25,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Date:
-      - Wed, 19 May 2021 21:37:25 GMT
+      - Wed, 19 May 2021 22:24:59 GMT
       Server:
       - Apache-Coyote/1.1
       Content-Length:
@@ -223,7 +223,7 @@ http_interactions:
             </wsdl:port>
           </wsdl:service>
         </wsdl:definitions>
-  recorded_at: Wed, 19 May 2021 21:37:25 GMT
+  recorded_at: Wed, 19 May 2021 22:24:59 GMT
 - request:
     method: post
     uri: http://search.webofknowledge.com/esti/wokmws/ws/WOKMWSAuthenticate
@@ -238,7 +238,7 @@ http_interactions:
       Accept:
       - "*/*"
       Date:
-      - Wed, 19 May 2021 21:37:25 GMT
+      - Wed, 19 May 2021 22:24:59 GMT
       Authorization:
       - Basic Settings.WOS.AUTH_CODE
       Soapaction:
@@ -255,11 +255,11 @@ http_interactions:
       Content-Type:
       - text/xml;charset=UTF-8
       Date:
-      - Wed, 19 May 2021 21:37:24 GMT
+      - Wed, 19 May 2021 22:24:59 GMT
       Server:
       - Apache-Coyote/1.1
       Set-Cookie:
-      - SID=8Ez6cnUDuWn6QiGf165
+      - SID=7FSwHpZAFFKuXLhrlFp
       Content-Length:
       - '252'
       Connection:
@@ -267,8 +267,8 @@ http_interactions:
     body:
       encoding: UTF-8
       string: <soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/"><soap:Body><ns2:authenticateResponse
-        xmlns:ns2="http://auth.cxf.wokmws.thomsonreuters.com"><return>8Ez6cnUDuWn6QiGf165</return></ns2:authenticateResponse></soap:Body></soap:Envelope>
-  recorded_at: Wed, 19 May 2021 21:37:25 GMT
+        xmlns:ns2="http://auth.cxf.wokmws.thomsonreuters.com"><return>7FSwHpZAFFKuXLhrlFp</return></ns2:authenticateResponse></soap:Body></soap:Envelope>
+  recorded_at: Wed, 19 May 2021 22:24:59 GMT
 - request:
     method: get
     uri: http://search.webofknowledge.com/esti/wokmws/ws/WokSearch?wsdl
@@ -281,9 +281,9 @@ http_interactions:
       Accept:
       - "*/*"
       Date:
-      - Wed, 19 May 2021 21:37:25 GMT
+      - Wed, 19 May 2021 22:24:59 GMT
       Cookie:
-      - SID="8Ez6cnUDuWn6QiGf165"
+      - SID="7FSwHpZAFFKuXLhrlFp"
       Soapaction:
       - ''
   response:
@@ -294,7 +294,7 @@ http_interactions:
       Content-Type:
       - text/xml
       Date:
-      - Wed, 19 May 2021 21:37:25 GMT
+      - Wed, 19 May 2021 22:24:59 GMT
       Server:
       - Apache-Coyote/1.1
       Transfer-Encoding:
@@ -985,7 +985,7 @@ http_interactions:
             </wsdl:port>
           </wsdl:service>
         </wsdl:definitions>
-  recorded_at: Wed, 19 May 2021 21:37:25 GMT
+  recorded_at: Wed, 19 May 2021 22:24:59 GMT
 - request:
     method: post
     uri: http://search.webofknowledge.com/esti/wokmws/ws/WokSearch
@@ -1000,9 +1000,9 @@ http_interactions:
       Accept:
       - "*/*"
       Date:
-      - Wed, 19 May 2021 21:37:25 GMT
+      - Wed, 19 May 2021 22:24:59 GMT
       Cookie:
-      - SID="8Ez6cnUDuWn6QiGf165"
+      - SID="7FSwHpZAFFKuXLhrlFp"
       Soapaction:
       - ''
       Content-Type:
@@ -1017,7 +1017,7 @@ http_interactions:
       Content-Type:
       - text/xml;charset=UTF-8
       Date:
-      - Wed, 19 May 2021 21:37:25 GMT
+      - Wed, 19 May 2021 22:24:59 GMT
       Server:
       - Apache-Coyote/1.1
       Content-Length:
@@ -1027,11 +1027,11 @@ http_interactions:
     body:
       encoding: UTF-8
       string: <soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/"><soap:Body><ns2:searchResponse
-        xmlns:ns2="http://woksearch.v3.wokmws.thomsonreuters.com"><return><queryId>1</queryId><recordsFound>2</recordsFound><recordsSearched>534059</recordsSearched><optionValue><label>RecordIDs</label><value>WOS:000617972500001</value><value>WOS:000636223400002</value></optionValue><records>&lt;records
+        xmlns:ns2="http://woksearch.v3.wokmws.thomsonreuters.com"><return><queryId>1</queryId><recordsFound>2</recordsFound><recordsSearched>533456</recordsSearched><optionValue><label>RecordIDs</label><value>WOS:000617972500001</value><value>WOS:000636223400002</value></optionValue><records>&lt;records
         xmlns="http://scientific.thomsonreuters.com/schema/wok5.4/public/Fields">&lt;REC
         r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000617972500001&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>&lt;REC
         r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000636223400002&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>&lt;/records></records></return></ns2:searchResponse></soap:Body></soap:Envelope>
-  recorded_at: Wed, 19 May 2021 21:37:26 GMT
+  recorded_at: Wed, 19 May 2021 22:24:59 GMT
 - request:
     method: post
     uri: http://search.webofknowledge.com/esti/wokmws/ws/WokSearch
@@ -1048,9 +1048,9 @@ http_interactions:
       Accept:
       - "*/*"
       Date:
-      - Wed, 19 May 2021 21:37:26 GMT
+      - Wed, 19 May 2021 22:24:59 GMT
       Cookie:
-      - SID="8Ez6cnUDuWn6QiGf165"
+      - SID="7FSwHpZAFFKuXLhrlFp"
       Soapaction:
       - ''
       Content-Type:
@@ -1065,7 +1065,7 @@ http_interactions:
       Content-Type:
       - text/xml;charset=UTF-8
       Date:
-      - Wed, 19 May 2021 21:37:25 GMT
+      - Wed, 19 May 2021 22:24:59 GMT
       Server:
       - Apache-Coyote/1.1
       Content-Length:
@@ -1075,7 +1075,7 @@ http_interactions:
     body:
       encoding: UTF-8
       string: <soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/"><soap:Body><ns2:searchResponse
-        xmlns:ns2="http://woksearch.v3.wokmws.thomsonreuters.com"><return><queryId>2</queryId><recordsFound>6</recordsFound><recordsSearched>534059</recordsSearched><optionValue><label>RecordIDs</label><value>WOS:000640492500004</value><value>WOS:000636223400002</value><value>WOS:000617972500001</value><value>WOS:000622797100001</value><value>WOS:000639111600002</value><value>WOS:000636658200001</value></optionValue><records>&lt;records
+        xmlns:ns2="http://woksearch.v3.wokmws.thomsonreuters.com"><return><queryId>2</queryId><recordsFound>6</recordsFound><recordsSearched>533456</recordsSearched><optionValue><label>RecordIDs</label><value>WOS:000640492500004</value><value>WOS:000636223400002</value><value>WOS:000617972500001</value><value>WOS:000622797100001</value><value>WOS:000639111600002</value><value>WOS:000636658200001</value></optionValue><records>&lt;records
         xmlns="http://scientific.thomsonreuters.com/schema/wok5.4/public/Fields">&lt;REC
         r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000640492500004&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>&lt;REC
         r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000636223400002&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>&lt;REC
@@ -1083,5 +1083,5 @@ http_interactions:
         r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000622797100001&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>&lt;REC
         r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000639111600002&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>&lt;REC
         r_id_disclaimer="ResearcherID data provided by Clarivate Analytics">&lt;UID>WOS:000636658200001&lt;/UID>&lt;static_data>&lt;/static_data>&lt;dynamic_data>&lt;cluster_related>&lt;/cluster_related>&lt;/dynamic_data>&lt;/REC>&lt;/records></records></return></ns2:searchResponse></soap:Body></soap:Envelope>
-  recorded_at: Wed, 19 May 2021 21:37:26 GMT
+  recorded_at: Wed, 19 May 2021 22:24:59 GMT
 recorded_with: VCR 6.0.0
