--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,8 @@ README_configs.txt
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+## production.yml anywhere, in case shared_configs was copied to make new VCR cassettes
+production.yml
 
 ## Private seed data
 spec/factories/*.local.rb
